k8s/Config/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: laravelclass
  rules:
    - host: localhost
      http:
        paths:
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 80
